<resources>
    <string name="app_name">FinancialRefrigerator</string>
    <string name="home">홈</string>
    <string name="cook_plan">요리 계획</string>
    <string name="refrigerator">냉장고</string>

    <string name="title_home">냉장고를 부탁해</string>
    <string name="title_meals">내가 할 요리</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_remove">삭제</string>
    <string name="text_label_search">오늘의 요리 검색</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cook_plan">나의 요리 계획</string>
    <string name="delete_success">성공적으로 삭제되었습니다.</string>
    <string name="toast_added_meal">할 요리에 추가되었습니다.</string>
    <string name="error">에러가 발생했습니다.</string>
    <string name="remove_recipe_item_dialog_content">해당 항목을 삭제하시겠습니까?</string>
    <string name="ingredients_description">식재료 설명</string>
    <string name="ingredients_description_add_please">식재료에 대한 설명을 입력하세요.</string>
    <string name="shelfLife">유통기한</string>
    <string name="ingredients_amount">식재료량</string>
    <string name="save">저장</string>
    <string name="search_result">\'%s\' 검색결과</string>
    <string name="add_to_cook">할 요리에 추가</string>
    <string name="complete_cook">요리 완료</string>
    <string name="add">add</string>
    <string name="calendar">달력</string>
    <string name="ingredients_name">식재료 이름</string>
    <string name="hint_ingredients_name">식재료 이름을 입력하세요.</string>
    <string name="modify_success">수정에 성공하였습니다.</string>
    <string name="save_success">저장에 성공하였습니다.</string>
    <string name="name_error">이름을 정확히 입력해주세요</string>
    <string name="quantity_error">식재료량을 정확히 입력해주세요</string>
    <string name="day_error">날짜를 정확히 입력해주세요</string>
    <string name="shelflife_error">이미 유통기한이 지난 식재료입니다.</string>
    <string name="my_refrigerator">나의 냉장고</string>
</resources>